feat: update AppLayout component; change height utility to h-dvh for better responsiveness

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
 @import 'tailwindcss';
 
 @layer components {
+  @theme {
+    --font-sans: 'Roboto Mono', sans-serif;
+  }
+
   .input {
     @apply w-full rounded-full border border-stone-200 px-4 py-2 text-sm transition-all duration-300 placeholder:text-stone-400 focus:ring focus:ring-yellow-400 focus:outline-none md:px-6 md:py-3;
   }
